Arrumando posicionamento e botando cores nas sections e divs

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
         <span class="cart__title">Meu carrinho</span>
       </div>
     </header>
-
-    
     <section class="container">
       <div class="loading">Carregando...</div>
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <p class="text-price">Total R$ <span class="total-price"></span></p>
+        <p class="text-price">Total <span class="total-price"></span></p>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
