--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
       </div>
+      <!-- <img src="excluir.png" alt="" srcset="" width="120px"> -->
     </header>
     <section class="container">
       <div class="loading">Carregando...</div>
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items"></ol>
+        <ol class="cart__items"><div class="loading">Carregando...</div></ol>
         <p class="text-price">Total <span class="total-price"></span></p>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
